--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-xl-6">
                 <div class="tm-section-half">    
                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon"></i></div>                        
-                    <h2 class="tm-section-title tm-color-primary mb-5">About Us</h2>
+                    <h2 class="tm-section-title tm-color-primary mb-5">Face Mask Recognition</h2>
                     <p class="mb-5">
                       When first section is scrolled up, BG image will be
                       disappeared with a parallax effect. Donec ac tempor tellus, a
@@ -116,7 +116,7 @@
               <div class="col-xl-6">
                 <div class="tm-section-half">
                     <div><i class="far fa-6x fa-building mb-5 tm-section-icon"></i></div>
-                    <h2 class="tm-section-title tm-color-primary mb-5">Company Profile</h2>
+                    <h2 class="tm-section-title tm-color-primary mb-5">Catan</h2>
                     <p class="mb-5">
                       You can use this template for your commercial websites or for your clients. 
                       You are NOT allowed to re-post this template as a downloadable ZIP file 
@@ -138,7 +138,7 @@
                 <div class="w-100 tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
-                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Our Work</h2>
+                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Catan</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
