--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                           <p>                            
                             I want to clarify that right now, the machine works just when I press a button, but I don’t know how to fix it yet. I believe it’s not a code problem, but it might be the weak WIFI or that the microcontroller is not powerful in off to stream the video and get the result simultaneously. I will keep working to figure out what it is and how I can improve it.
                           </p>
+                          <div class="center"><img src="img/f1.png" alt="4 pic" style="width: 45%"><br><br></div>
+
                           <iframe src="https://gmail988452.autodesk360.com/shares/public/SH919a0QTf3c32634dcf191c66a2fa416c25?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
                           <p><strong>Software</strong></p>
                           <p class="mb-5">
@@ -122,7 +124,9 @@
                             My next project doesn't involve any electronics. With my friends, we really enjoy playing board games, especially Settlers of Catan, so I 3d print and hand paint the hole base game. I made some extras like the longest road reward. Now I'm working on creating our cards. I didn’t design the pieces I collect them from different makers. I modified some of the to fit better. What I learned with this project was to 3D print, this was my first big project in my own printer, so I had to figure out leveling and how to prevent lifting. In the pictures I show some of the failures. 
                           </p>
                       </div>
-                      <img src="mic.png" alt="4 pic" style="width: 45%">
+                      <img src="img/c1.png" alt="4 pic" style="width: 45%">
+                      <img src="img/c2.png" alt="4 pic" style="width: 45%">
+
                   </div> 
               </div>                             
             </section>
@@ -133,12 +137,14 @@
               <div class="col-12 tm-section-pad">
                   <div class="tm-flex-item-left">
                       <div class="tm-w-80">
-                          <h2 class="tm-color-primary tm-section-title mb-4">Our Clients</h2>
+                          <h2 class="tm-color-primary tm-section-title mb-4">Cloud Lamp</h2>
                           <p><strong>Hardware</strong></p>
                           <p class="mb-5">
                             I used fusion 360 to design a lamp with a thread system to connect to the base for easy access to the circuit. The top of the lamp was created to fit perfectly in the cylinder; I end up gluing that parts together. I designed the cylinder to be as thin as it could be at the same time keeping the clouds in shape. All was 3D printed on an Ender 3 pro with PLA. 
-                          </p>                    
+                          </p> 
+                         <img src="img/l1.png" alt="4 pic" style="width: 45%"><br><br>                 
                          <iframe src="https://gmail988452.autodesk360.com/shares/public/SH919a0QTf3c32634dcfd937aa1772f532b4?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                                              
                           <p><strong>Software</strong></p>
                           <p class="mb-5">
                           For the code, I create a website with three sliders, each corresponding to the RGB colors. What the JavaScript does is to assign a number between 0 and 255 to a position in the slider or vice versa. The RGB color is displayed at the top of the website, so I can see which color is before sending it. The number is a string, but the Arduino needs an int. Therefore, before updating the data to the database, I convert the string into an int with parse. I also include a button to turned off. I used Firebase as my database. Here I’m going to include just the Arduino and the JavaScript because are the two most important; for more specification reefer to my GitHub in the Portfolio repository. 
